syntax = "proto3";

package brbctpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/brbctpb";

import "mir/codegen_extensions.proto";
import "net/codegen_extensions.proto";

import "commonpb/commonpb.proto";

// ============================================================
// Net Messages
// ============================================================

message Message {
  option (net.message_class) = true;

  oneof type {
    option (net.message_type) = true;

    StartMessage start_message = 1;
    EchoMessage echo_message = 2;
    ReadyMessage ready_message = 3;
  }
}

message StartMessage {
  option (net.message) = true;

  int64 id = 1;
  bytes chunk = 2;
  bytes root_hash = 3;
  commonpb.MerklePath proof = 4;
}


message EchoMessage {
  option (net.message) = true;

  int64 id = 1;
  bytes chunk = 2;
  bytes root_hash = 3;
  commonpb.MerklePath proof = 4;
}

message ReadyMessage {
  option (net.message) = true;

  int64 id = 1;
  bytes root_hash = 2;
}
